@@ -77,40 +77,40 @@ class TestObjectProperty (TestCase):
 
         o = OCTestObjectProperty1.alloc().init()
 
-        self.assertTrue(o.respondsToSelector(b'p1'))
-        self.assertTrue(o.respondsToSelector(b'setP1:'))
+        self.assertTrue(o.respondsToSelector_(b'p1'))
+        self.assertTrue(o.respondsToSelector_(b'setP1:'))
 
         v = OCCopy.alloc().init()
         o.p1 = v
         self.assertIs(o.p1, v)
         self.assertIs(o._p1, v)
 
-        self.assertTrue(o.respondsToSelector(b'p2'))
-        self.assertTrue(o.respondsToSelector(b'setP2:'))
+        self.assertTrue(o.respondsToSelector_(b'p2'))
+        self.assertTrue(o.respondsToSelector_(b'setP2:'))
 
         o.p2 = v
         self.assertIsInstance(o.p2, OCCopy)
         self.assertIsNot(o.p2, v)
         self.assertIsNot(o._p2, v)
 
-        self.assertTrue(o.respondsToSelector(b'p3'))
-        self.assertFalse(o.respondsToSelector(b'setP3:'))
+        self.assertTrue(o.respondsToSelector_(b'p3'))
+        self.assertFalse(o.respondsToSelector_(b'setP3:'))
 
         o._p3 = v
         self.assertIs(o.p3, v)
 
 
-        self.assertTrue(o.respondsToSelector(b'p4'))
-        self.assertTrue(o.respondsToSelector(b'setP4:'))
+        self.assertTrue(o.respondsToSelector_(b'p4'))
+        self.assertTrue(o.respondsToSelector_(b'setP4:'))
 
         o.p4 = v
         self.assertIs(o.p4, v)
         self.assertIs(o.myp4, v)
 
-        self.assertTrue(o.respondsToSelector(b'p5'))
-        self.assertTrue(o.respondsToSelector(b'setP5:'))
-        self.assertTrue(o.respondsToSelector(b'p6'))
-        self.assertTrue(o.respondsToSelector(b'setP6:'))
+        self.assertTrue(o.respondsToSelector_(b'p5'))
+        self.assertTrue(o.respondsToSelector_(b'setP5:'))
+        self.assertTrue(o.respondsToSelector_(b'p6'))
+        self.assertTrue(o.respondsToSelector_(b'setP6:'))
         s = o.methodSignatureForSelector_(b'p5')
         self.assertEqual(s.methodReturnType(), objc._C_INT)
         s = o.methodSignatureForSelector_(b'p6')
@@ -154,21 +154,21 @@ class TestObjectProperty (TestCase):
         self.assertIsInstance(v, objc.lookUpClass('NSSet'))
         self.assertEqual(v, {'p1', 'p2', 'p4'})
 
-        self.assertTrue(object1.respondsToSelector('p1'))
-        self.assertTrue(object1.respondsToSelector('setP1:'))
-        self.assertTrue(object1.respondsToSelector('p2'))
-        self.assertTrue(object1.respondsToSelector('setP2:'))
-        self.assertTrue(object1.respondsToSelector('p3'))
-        self.assertFalse(object1.respondsToSelector('setP3:'))
+        self.assertTrue(object1.respondsToSelector_('p1'))
+        self.assertTrue(object1.respondsToSelector_('setP1:'))
+        self.assertTrue(object1.respondsToSelector_('p2'))
+        self.assertTrue(object1.respondsToSelector_('setP2:'))
+        self.assertTrue(object1.respondsToSelector_('p3'))
+        self.assertFalse(object1.respondsToSelector_('setP3:'))
 
-        self.assertTrue(object2.respondsToSelector('p1'))
-        self.assertTrue(object2.respondsToSelector('setP1:'))
-        self.assertTrue(object2.respondsToSelector('p2'))
-        self.assertTrue(object2.respondsToSelector('setP2:'))
-        self.assertTrue(object2.respondsToSelector('p3'))
-        self.assertFalse(object2.respondsToSelector('setP3:'))
-        self.assertTrue(object2.respondsToSelector('p4'))
-        self.assertTrue(object2.respondsToSelector('setP4:'))
+        self.assertTrue(object2.respondsToSelector_('p1'))
+        self.assertTrue(object2.respondsToSelector_('setP1:'))
+        self.assertTrue(object2.respondsToSelector_('p2'))
+        self.assertTrue(object2.respondsToSelector_('setP2:'))
+        self.assertTrue(object2.respondsToSelector_('p3'))
+        self.assertFalse(object2.respondsToSelector_('setP3:'))
+        self.assertTrue(object2.respondsToSelector_('p4'))
+        self.assertTrue(object2.respondsToSelector_('setP4:'))
 
         observer1.register(object1, 'p1')
         observer1.register(object1, 'p2')
@@ -265,21 +265,21 @@ class TestObjectProperty (TestCase):
         self.assertIsInstance(v, objc.lookUpClass('NSSet'))
         self.assertEqual(v, {'p1', 'p2', 'p4'})
 
-        self.assertTrue(object1.respondsToSelector('p1'))
-        self.assertTrue(object1.respondsToSelector('setP1:'))
-        self.assertTrue(object1.respondsToSelector('p2'))
-        self.assertTrue(object1.respondsToSelector('setP2:'))
-        self.assertTrue(object1.respondsToSelector('p3'))
-        self.assertFalse(object1.respondsToSelector('setP3:'))
+        self.assertTrue(object1.respondsToSelector_('p1'))
+        self.assertTrue(object1.respondsToSelector_('setP1:'))
+        self.assertTrue(object1.respondsToSelector_('p2'))
+        self.assertTrue(object1.respondsToSelector_('setP2:'))
+        self.assertTrue(object1.respondsToSelector_('p3'))
+        self.assertFalse(object1.respondsToSelector_('setP3:'))
 
-        self.assertTrue(object2.respondsToSelector('p1'))
-        self.assertTrue(object2.respondsToSelector('setP1:'))
-        self.assertTrue(object2.respondsToSelector('p2'))
-        self.assertTrue(object2.respondsToSelector('setP2:'))
-        self.assertTrue(object2.respondsToSelector('p3'))
-        self.assertFalse(object2.respondsToSelector('setP3:'))
-        self.assertTrue(object2.respondsToSelector('p4'))
-        self.assertTrue(object2.respondsToSelector('setP4:'))
+        self.assertTrue(object2.respondsToSelector_('p1'))
+        self.assertTrue(object2.respondsToSelector_('setP1:'))
+        self.assertTrue(object2.respondsToSelector_('p2'))
+        self.assertTrue(object2.respondsToSelector_('setP2:'))
+        self.assertTrue(object2.respondsToSelector_('p3'))
+        self.assertFalse(object2.respondsToSelector_('setP3:'))
+        self.assertTrue(object2.respondsToSelector_('p4'))
+        self.assertTrue(object2.respondsToSelector_('setP4:'))
 
         observer1.register(object1, 'p1')
         observer1.register(object1, 'p2')
